src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>APS_Age__c</fullName>
        <formula>IF(
!ISNULL(APS_DOB__c), 

TEXT(FLOOR((TODAY() - APS_DOB__c)/365.25)) &amp; &quot;  Years &quot; &amp; 
TEXT(Round((MOD((TODAY() - APS_DOB__c),365.25)/30),0)) &amp; &quot; Months&quot;, 

&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a calculated value off Date of Birth</inlineHelpText>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Billing_Phone__c</fullName>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>APS_Business_Days__c</fullName>
        <description>Business Days</description>
        <label>Business Days</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>APS_Business_Hours_End__c</fullName>
        <description>Business Hours End</description>
        <label>Business Hours End</label>
        <picklist>
            <controllingField>APS_Business_Hours_Start__c</controllingField>
            <picklistValues>
                <fullName>00:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_Business_Hours_Start__c</fullName>
        <description>Business Hours Start</description>
        <label>Business Hours Start</label>
        <picklist>
            <picklistValues>
                <fullName>00:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>00:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_CareGiver_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CareGiver Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APS_Care_Giver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Caregiver</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Caregiver</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Care Giver)</relationshipLabel>
        <relationshipName>CareGiver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APS_Caregiver_ID__c</fullName>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Caregiver ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>APS_Contact_Email__c</fullName>
        <description>This is Where Email Notifications Will be Sent</description>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>APS_Contact_Name__c</fullName>
        <description>Name of contacts at the Pharmacy</description>
        <label>Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Current_User__c</fullName>
        <description>Created to check owner equals Current User.</description>
        <formula>IF(OwnerId = $User.Id, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <label>Current User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_DEA_ID__c</fullName>
        <description>APS DEA ID</description>
        <label>DEA ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_DOB__c</fullName>
        <description>Date of Birth</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_Data_Source__c</fullName>
        <label>APS Data Source</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Delete_This_field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete This field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APS_DousignStatus__c</fullName>
        <label>DousignStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Envelope_Id__c</fullName>
        <label>Envelope Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Gender__c</fullName>
        <description>Gender</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_HCP_ID__c</fullName>
        <displayFormat>H-{00000000}</displayFormat>
        <label>Provider ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>APS_HCP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to HCP Account</description>
        <label>Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Provider</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APS_Home_Address__c</fullName>
        <label>Home Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Home__c</fullName>
        <description>Home Phone numebr</description>
        <label>Home</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>APS_Languages__c</fullName>
        <description>Languages</description>
        <label>Languages</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnamese</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>APS_Last_Pickup_Time__c</fullName>
        <description>Last  Pickup Time</description>
        <label>Last  Pickup Time</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_Marketing_OptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing_OptOut__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APS_NPI__c</fullName>
        <description>NPI #</description>
        <label>NPI #</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APS_No_of_Appointments_Per_Day__c</fullName>
        <defaultValue>5</defaultValue>
        <description>This field will store the number of appointments allowed for this centre per day</description>
        <label>No of Appointments Per Day</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APS_Office__c</fullName>
        <description>Office Phone number</description>
        <label>Office</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>APS_Ok_to_leave_message_Home__c</fullName>
        <label>Ok to Leave Message (Home)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_Ok_to_leave_message_Mobile__c</fullName>
        <label>Ok to Leave Message (Mobile)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_Ok_to_leave_message_Office__c</fullName>
        <label>Ok to Leave Message (Office)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_Patient_ID__c</fullName>
        <displayFormat>P-{00000000}</displayFormat>
        <label>Patient ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>APS_Person_Email__c</fullName>
        <label>PersonEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>APS_Pharmacy_Account_Number__c</fullName>
        <label>Pharmacy Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Pharmacy_Name__c</fullName>
        <label>Pharmacy Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Pharmacy_Type__c</fullName>
        <label>Pharmacy Type</label>
        <picklist>
            <picklistValues>
                <fullName>Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>APS_Plant_ID__c</fullName>
        <label>Plant ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Preferred_Contact_Method__c</fullName>
        <description>Preferred Contact Method</description>
        <label>Preferred Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_Preferred_Languages__c</fullName>
        <description>Preferred Language</description>
        <label>Preferred Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnamese</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_Prescribing_Physician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Prescribing Physician</description>
        <label>Prescribing Physician</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Prescribing Physician)</relationshipLabel>
        <relationshipName>APS_Prescribing_Physician</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APS_Primary_address__c</fullName>
        <label>APS Primary Address</label>
        <summaryFilterItems>
            <field>APS_Address__c.APS_Primary__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>APS_Address__c.APS_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APS_Product__c</fullName>
        <description>The temporary text field that will store the Products separated by a semicolon</description>
        <inlineHelpText>List all the Product Names separated by semicolons and no extra spaces. For your reference, here are few examples:
1. Product 1
2. Product 1;Product 2
3. Product 1;Product 2;
4. ;Product 1;Product 2</inlineHelpText>
        <label>Product</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APS_Products__c</fullName>
        <description>Which products does this Pharmacy handle?</description>
        <label>Products</label>
        <picklist>
            <picklistValues>
                <fullName>Luminate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graftex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percivex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remberol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gevera</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>APS_RX_Fill_latest_date__c</fullName>
        <description>Holds Last RX fill date</description>
        <label>RX Fill Latest Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APS_Secondary_Caregiver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Caregiver</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Caregiver</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Secondary Caregiver)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APS_Source__c</fullName>
        <description>Source</description>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Self registered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_Speciality__c</fullName>
        <description>Speciality</description>
        <label>Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>Aerospace Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anesthesiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Biochemical Genetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Cytogenetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Genetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Molecular Genetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colon and Rectal Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Physics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurological Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurology with Special Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obstetrics and Gynecology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occupational Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ophthalmology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthopaedic Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otolaryngology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pathology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pediatrics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Medicine and Rehabilitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plastic Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Health and General Preventive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radiology</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>APS_State_1__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_State_Medical_License__c</fullName>
        <description>State Medical License #</description>
        <label>State Medical License #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Onboarding in Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Onboarding Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adherence in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adherence Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_Tax_ID__c</fullName>
        <description>APS Tax ID</description>
        <label>Tax ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Territory_Address__c</fullName>
        <description>4.1</description>
        <label>Territory Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Test_Profile__c</fullName>
        <label>Test Profile</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LASH_Account_Best_Day_To_Call__c</fullName>
        <formula>IF(INCLUDES( APS_Business_Days__c  , &quot;Monday&quot; ), &quot;Monday &quot;,null ) &amp; 
IF(INCLUDES(APS_Business_Days__c  , &quot;Tuesday&quot; ), &quot;Tuesday &quot;,null ) &amp; 
IF(INCLUDES(APS_Business_Days__c  , &quot;Wednesday&quot; ),&quot;Wednesday &quot;,null ) &amp; 
IF(INCLUDES(APS_Business_Days__c  , &quot;Thursday&quot; ), &quot;Thursday &quot;,null ) &amp; 
IF(INCLUDES(APS_Business_Days__c  , &quot;Friday&quot; ), &quot;Friday &quot;,null ) &amp; 
IF(INCLUDES(APS_Business_Days__c  , &quot;Saturday&quot; ), &quot;Saturday; &quot;,null ) &amp; 
IF(INCLUDES(APS_Business_Days__c  , &quot;Sunday&quot; ), &quot;Sunday &quot;,null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Best Day To Call</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Account_Type__c</fullName>
        <description>used for Change Request for Account Lookup filter</description>
        <formula>RecordType.DeveloperName</formula>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
</CustomObject>